# ocrmypdf-rs

./: .gitignore  Cargo.toml  README.MD
src/: lib.rs  main.rs
