[package]
name = "ocrmypdf-rs"
version = "0.0.1"
edition = "2021"
authors = ["Lucas Souza <ls4803326@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A sdk for the ocrmypdf command line tool"
readme = "README.MD"
homepage = "https://github.com/piazin/ocrmypdf-rs"
repository = "https://github.com/piazin/ocrmypdf-rs"
keywords = ["ocr", "ocrmypdf", "pdf"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
